<?xml version="1.0"?>
<package format="2">
  <name>HappyTBY</name>
  <version>1.2.5</version>
  <description>
    ROS packages for the AA contest RC car HappyTBY (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="bhbhchoi@yu.ac.kr">Refstop</author>
  <author>Refstop</author>
  <maintainer email="bhbhchoi@yu.ac.kr">Refstop</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>HappyTBY_bringup</exec_depend>
  <exec_depend>HappyTBY_slam</exec_depend>
  <exec_depend>sc_mini</exec_depend>
  <exec_depend>handsfree_ros_imu</exec_depend>
  <export><metapackage/></export>
</package>
